[REFACTOR] Connect to JPA and Fix some error caused by ReviewRepository